fix (user-side): add several spacing fixes, AB Testing for hero section, add communities list section to all tech pages

--- a/src/assets/styles/pc-only.css
+++ b/src/assets/styles/pc-only.css
@@ -127,9 +127,9 @@
     /* width: 80%; */
   }
 
-  .link-text {
+  /* .link-text {
     font-size: 1.1rem;
-  }
+  } */
 
   .testi-form-wrapper {
     border: 1px dashed rgb(230, 226, 226);
@@ -162,17 +162,57 @@
     height: 68vh;
   }
 
+  .new-one-box img {
+    object-fit: cover;
+    width: 100%;
+    height: 202px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
+  .new-one-box-body {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .new-one-box-footer {
+    margin-top: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 30px 15px;
+  }
+
   /* --------------------------------- END OF PC SPECIFIC ---------------------- */
 }
 
+.int-panel {
+  border: 2px solid var(--app-accent-3);
+  padding: 13px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 3px;
+}
+.int-panel i {
+  color: var(--app-accent-3) !important;
+}
+.int-panel small {
+  color: #383838 !important;
+}
+
 .camp-share-btn-v2 {
-  position: absolute;
-  bottom: -26px;
+  position: fixed;
+  right: 0;
+  top: 200px;
   background: white;
   padding: 10px 20px;
   color: var(--app-main-color);
-  left: 47vw;
+  /* left: 47vw; */
   border-radius: 55px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   font-weight: bold;
   font-size: var(--app-body-font);
 }
